setBeensBitmap, setBeensKosten, getAnzahlBeens, getBeensKosten als Methoden angelgt und Kommentiert

--- a/Projektarbeit/Projektarbeit.csproj
+++ b/Projektarbeit/Projektarbeit.csproj
@@ -102,10 +102,10 @@
     <None Include="Resources\shop.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\D9DAAAEB-9E0C-433E-A4AD-3DFED8A0B0AC.png" />
+    <None Include="Resources\KaffeeArten.txt" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\KaffeeArten.txt" />
+    <None Include="Resources\unknown4.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
