--- a/Projektarbeit/Projektarbeit.csproj
+++ b/Projektarbeit/Projektarbeit.csproj
@@ -98,6 +98,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Steuerelemente\uc_NeuesSpiel.resx">
+      <DependentUpon>uc_NeuesSpiel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
