--- a/Projektarbeit/Projektarbeit.csproj
+++ b/Projektarbeit/Projektarbeit.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Forms\ShopUndUpgrade.Designer.cs">
       <DependentUpon>ShopUndUpgrade.cs</DependentUpon>
     </Compile>
+    <Compile Include="Klassen\SoundPlayerKlasse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steuerelemente\uc_Einstellungen.cs">
